Changed to use spectre.console from system.commandLine

--- a/AvroFusionSource/AvroFusionGenerator/Properties/launchSettings.json
+++ b/AvroFusionSource/AvroFusionGenerator/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "AvroFusionGenerator": {
       "commandName": "Project",
-      "commandLineArgs": "\"D:\\AvroFusionGenerator\\SampleAndTest\\TestModels\\GenerateAvscSchemaFromThisModel.cs\" \"D:\\AvroFusionGenerator\\SampleAndTest\\TestModels\\\""
+      "commandLineArgs": "generate --input-file \"D:\\AvroFusionGenerator\\SampleAndTest\\TestModels\\GenerateAvscSchemaFromThisModel.cs\" --output-dir \"D:\\AvroFusionGenerator\\SampleAndTest\\TestModels\\\"\r\n"
     }
   }
 }
