--- a/AvroFusionSource/AvroFusionGenerator/AvroFusionGenerator.csproj
+++ b/AvroFusionSource/AvroFusionGenerator/AvroFusionGenerator.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="spectre.console" Version="0.46.0" />
+    <PackageReference Include="Spectre.Console.Cli" Version="0.46.0" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
 
