--- a/SampleAndTest/TestModels/TestModels.csproj
+++ b/SampleAndTest/TestModels/TestModels.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Apache.Avro" Version="1.11.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\AvroFusionSource\AvroFusionGenerator\AvroFusionGenerator.csproj" />
+  </ItemGroup>
+
 </Project>
