Github action update

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -55,7 +55,7 @@ jobs:
     runs-on: windows-latest
 
     env:
-      Solution_Name: AvroFusionGenerator
+      Solution_Name: AvroFusionGenerator.sln
 
     steps:
     - name: Checkout
