--- a/SampleAndTest/TestModels/TestModels.csproj
+++ b/SampleAndTest/TestModels/TestModels.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\..\AvroFusionSource\AvroFusionGenerator\AvroFusionGenerator.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="output\" />
+  </ItemGroup>
+
 </Project>
