--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -47,7 +47,7 @@ on:
 jobs:
 
   build:
-
+    name: Build ${{ matrix.configuration }}
     strategy:
       matrix:
         configuration: [Debug, Release]
