Added XML Documentations

--- a/AvroFusionSource/AvroFusionGenerator/AvroFusionGenerator.csproj
+++ b/AvroFusionSource/AvroFusionGenerator/AvroFusionGenerator.csproj
@@ -34,7 +34,10 @@ Seamless integration with existing C# projects
 Automatic inclusion of required namespaces and using directives
 By using the Avro Schema Generator for C#, developers can improve the efficiency of their data interchange processes, reducing the need for manual schema creation and maintenance. This tool is designed to simplify working with Avro in C# applications and make it more accessible for developers who want to leverage the benefits of Avro serialization in their projects.</PackageReleaseNotes>
     <PackAsTool>True</PackAsTool>
-    <PackageIcon>AVSCGenerator.png</PackageIcon>
+	  <ToolCommandName>AvroFusionGenerator</ToolCommandName>
+	  <PackageId>AvroFusionGenerator</PackageId>
+	  <PackageOutputPath>./nupkg</PackageOutputPath>
+    <PackageIcon>.\Assets\AVSCGenerator.png</PackageIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
