--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -69,6 +69,9 @@ jobs:
       with:
         dotnet-version: 7.0.x
 
+    - name: Restore dependencies
+      run: dotnet restore
+
     # Add MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
@@ -89,6 +92,16 @@ jobs:
         Appx_Bundle_Platforms: x86|x64
         Appx_Package_Build_Mode: StoreUpload
         Configuration: ${{ matrix.configuration }}
+    
+    - name: Create NuGet package
+      run: dotnet pack --configuration Release
+      working-directory: AvroFusionGenerator.sln/AvroFusionGenerator.csproj
+
+    - name: Publish NuGet package
+      uses: actions/upload-artifact@v2
+      with:
+        name: NuGetPackage
+        path: AvroFusionGenerator/nupkg/*.nupkg
 
     - name: Set version number output
       id: set_version_number
