--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -95,7 +95,7 @@ jobs:
     
     - name: Create NuGet package
       run: dotnet pack --configuration Release
-      working-directory: AvroFusionGenerator.sln/AvroFusionGenerator.csproj
+      working-directory: AvroFusionGenerator/AvroFusionSource/AvroFusionGenerator.csproj
 
     - name: Publish NuGet package
       uses: actions/upload-artifact@v2
