--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -105,7 +105,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: NuGetPackage
-        path: AvroFusionGenerator/nupkg/*.nupkg
+        path: AvroFusionSource\AvroFusionGenerator/nupkg/*.nupkg
         if-no-files-found: warn
 
     - name: Set version number output
