--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -108,11 +108,48 @@ jobs:
         path: AvroFusionSource\AvroFusionGenerator/nupkg/*.nupkg
         if-no-files-found: warn
 
+    - name: Create GITHUB_OUTPUT file
+      run: |
+        echo "GITHUB_OUTPUT=${{ runner.temp }}/github_output.env" >> $GITHUB_ENV
+
     - name: Set version number output
       id: set_version_number
-      run: echo "::set-output name=version_number::1.0.0"
+      run: echo "version_number=1.0.0" >> $GITHUB_OUTPUT
 
     - name: Set release number output
       id: set_release_number
-      run: echo "::set-output name=release_number::100"
+      run: echo "release_number=100" >> $GITHUB_OUTPUT
+
+    - name: Use version and release numbers
+      run: |
+        export $(cat $GITHUB_OUTPUT | xargs)
+        echo "The version number is: $version_number"
+        echo "The release number is: $release_number"
+
+    - name: Create GITHUB_OUTPUT file
+      run: |
+        echo "GITHUB_OUTPUT=${{ runner.temp }}/github_output.env" >> $GITHUB_ENV
+
+    - name: Get latest commit short hash
+      run: echo "short_hash=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      
+    - name: Get total number of commits on main branch
+      run: echo "commit_count=$(git rev-list --count HEAD)" >> $GITHUB_OUTPUT
+      
+    - name: Use output values
+      run: |
+        export $(cat $GITHUB_OUTPUT | xargs)
+        build_number=$(($commit_count + 1))
+        release_number="1.0.$build_number"
+        echo "Build number: $build_number"
+        echo "Release number: $release_number"
+      
+    - name: Create Git tag
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git tag "v${release_number}-b${build_number}-g${short_hash}"
+        git push --tags
+
+
 
