--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -78,10 +78,11 @@ jobs:
 
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
-      run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
+      run: dotnet build $Solution_Name --configuration $Configuration
       env:
         Configuration: ${{ matrix.configuration }}
       shell: bash
+
 
     # Create the app package by building and packaging the Windows Application Packaging project
     - name: Create the app package
