--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -129,11 +129,13 @@ jobs:
       
     - name: Create Git tag
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git tag "v${release_number}-b${build_number}-g${short_hash}"
-        git push --tags
+       git config --local user.email "action@github.com"
+       git config --local user.name "GitHub Action"
+       git tag "v${release_number}-b${build_number}-g${short_hash}"
+       git remote set-url origin https://${{ secrets.BUILD_TAGGING_ACCESS_TOKEN }}@github.com/${{ github.repository }}.git
+       git push --tags
       shell: bash
+
 
     - name: Set version number output
       run: echo "version_number=1.0.0" >> $GITHUB_OUTPUT
