--- a/.github/workflows/AvroFusionGenerator.yml
+++ b/.github/workflows/AvroFusionGenerator.yml
@@ -35,7 +35,7 @@
 # For more information on GitHub Actions, refer to https://github.com/features/actions
 # For a complete CI/CD sample to get started with GitHub Action workflows for Desktop Applications,
 # refer to https://github.com/microsoft/github-actions-for-desktop-apps
-name: .NET 7 Desktop
+name: .NET 7 AVRO Fusion Generator
 
 on:
   push:
@@ -72,12 +72,7 @@ jobs:
       run: dotnet restore
       shell: bash
 
-    # Add MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
-    - name: Setup MSBuild.exe
-      uses: microsoft/setup-msbuild@v1.0.2
-
-    # Restore the application to populate the obj folder with RuntimeIdentifiers
-    - name: Restore the application
+    - name: Build the solution
       run: dotnet build $Solution_Name --configuration $Configuration
       env:
         Configuration: ${{ matrix.configuration }}
