--- a/.github/workflows/AvroFusionGenerator.yml
+++ b/.github/workflows/AvroFusionGenerator.yml
@@ -55,6 +55,7 @@ jobs:
 
     env:
       Solution_Name: AvroFusionGenerator.sln
+      Project_Name: AvroFusionSource/AvroFusionGenerator
 
     steps:
     - name: Checkout
@@ -81,9 +82,9 @@ jobs:
 
     # Create the app package by building and packaging the Windows Application Packaging project
     - name: Create the app package
-      run: dotnet build $Solution_Name --configuration $Configuration
-      env:
-        Configuration: ${{ matrix.configuration }}
+      run: | 
+       working_directory="AvroFusionSource/${{ env.Project_Name }}"
+       dotnet msbuild $working_directory/${{ env.Project_Name }}.proj /p:Configuration=${{ matrix.configuration }} /t:Publish
       shell: bash
     
     - name: Create NuGet package
