--- a/.github/workflows/AvroFusionGenerator.yml
+++ b/.github/workflows/AvroFusionGenerator.yml
@@ -56,6 +56,8 @@ jobs:
     env:
       Solution_Name: AvroFusionGenerator.sln
       Project_Name: AvroFusionSource/AvroFusionGenerator
+      Project_Directory: AvroFusionSource/AvroFusionGenerator
+
 
     steps:
     - name: Checkout
@@ -82,9 +84,7 @@ jobs:
 
     # Create the app package by building and packaging the Windows Application Packaging project
     - name: Create the app package
-      run: | 
-        working_directory="${{ env.Project_Name }}"
-        dotnet msbuild $working_directory/${{ env.Project_Name }}.proj /p:Configuration=${{ matrix.configuration }} /t:Publish
+      run:  dotnet msbuild ${{ env.Project_Directory }}/${{ env.Project_Name }}.proj /p:Configuration=${{ matrix.configuration }} /t:Publish
       shell: bash
     
     - name: Create NuGet package
