--- a/.github/workflows/UpdateReadme.yml
+++ b/.github/workflows/UpdateReadme.yml
@@ -42,6 +42,18 @@ jobs:
         Configuration: ${{ matrix.configuration }}
       shell: bash
 
+    - name: List build output directory contents
+      run: |
+       if [ "${{ matrix.configuration }}" == "Debug" ]; then
+        cd ${{ env.Project_Directory }}/bin/Debug/net7.0/
+       else
+        cd ${{ env.Project_Directory }}/bin/Release/net7.0/
+       fi
+       ls -l
+      working-directory: ${{ env.Project_Directory }}
+      shell: bash
+
+
     - name: Run the executable
       run: |
           if [ "${{ matrix.configuration }}" == "Debug" ]; then
@@ -50,6 +62,7 @@ jobs:
            cd ${{ env.Project_Directory }}/bin/Release/net7.0/
           fi
           chmod +x AvroFusionGeneratorReadMeUpdater.exe
+          ls -l
           ./AvroFusionGeneratorReadMeUpdater.exe
       working-directory: ${{ env.Project_Directory }}
       shell: bash
