--- a/.github/workflows/UpdateReadme.yml
+++ b/.github/workflows/UpdateReadme.yml
@@ -51,10 +51,17 @@ jobs:
       run: |
         if [ "${{ matrix.configuration }}" == "Debug" ]; then
            cd ${{ env.Project_Directory }}/bin/Debug/net7.0/
+           echo "Changing to Debug directory"
+           pwd
+           echo "Current Debug directory: $(pwd)"
         else
            cd ${{ env.Project_Directory }}/bin/Release/net7.0/
+           echo "Changing to Release directory"
+           pwd
+           echo "Current Release directory: $(pwd)"
         fi
         pwd
+        echo "Current directory: $(pwd)"
         chmod +x AvroFusionGeneratorReadMeUpdater.exe
         ls -l
         ./AvroFusionGeneratorReadMeUpdater.exe
