--- a/.github/workflows/UpdateReadme.yml
+++ b/.github/workflows/UpdateReadme.yml
@@ -49,6 +49,8 @@ jobs:
 
     - name: Run the executable
       working-directory: AvroFusionSource/AvroFusionGeneratorReadMeUpdater/bin/${{ matrix.configuration }}/net7.0
+      env:
+       BUILD_TAGGING_ACCESS_TOKEN: ${{ secrets.BUILD_TAGGING_ACCESS_TOKEN }}
       run: |
        chmod +x AvroFusionGeneratorReadMeUpdater
        ls -l
