--- a/.github/workflows/UpdateReadme.yml
+++ b/.github/workflows/UpdateReadme.yml
@@ -9,21 +9,28 @@ on:
       - main
 
 jobs:
-
-  build:
-    name: Build ${{ matrix.configuration }}
-    strategy:
-      matrix:
-       configuration: [Debug, Release]
-
+ job1:
     runs-on: ubuntu-latest
+    steps:
+      - name: Set NuGet package path as environment variable
+        run: echo "PACKAGE_NAME=AvroFusionSource/AvroFusionGenerator/nupkg/" >> $GITHUB_ENV
 
-    env:
+      - name: Display NuGet package path
+        run: |
+            echo "NuGet Package Path: ${{ env.PACKAGE_NAME }}"
+ job2:
+   runs-on: ubuntu-latest
+   needs: job1
+   strategy:
+      matrix:
+        configuration: [Debug, Release]
+   
+   env:
       Solution_Name: AvroFusionGenerator.sln
       Project_Name: AvroFusionGeneratorReadMeUpdater
       Project_Directory: AvroFusionSource/AvroFusionGeneratorReadMeUpdater
 
-    steps:
+   steps:
     - name: Check out repository
       uses: actions/checkout@v2
 
