--- a/AvroFusionSource/AvroFusionGeneratorReadMeUpdater/AvroFusionGeneratorReadMeUpdater.csproj
+++ b/AvroFusionSource/AvroFusionGeneratorReadMeUpdater/AvroFusionGeneratorReadMeUpdater.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="NuGet.Versioning" Version="6.5.0" />
     <PackageReference Include="Octokit" Version="5.0.4" />
   </ItemGroup>
 
