Only Release Build

--- a/.github/workflows/UpdateReadme.yml
+++ b/.github/workflows/UpdateReadme.yml
@@ -25,7 +25,7 @@ jobs:
    needs: job1
    strategy:
       matrix:
-        configuration: [Debug, Release]
+        configuration: [Release]
    
    env:
       Solution_Name: AvroFusionGenerator.sln
